# workout-backend

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: pr-linters.yml
app/: config.py  database.py  dependencies.py  main.py
app/alembic/: env.py
app/application/interactors/: user_registration.py
app/application/interfaces/: uow.py
app/application/interfaces/repository/: user.py
app/auth/application/dto/: login.py  registration.py  user.py  user_token.py
app/auth/application/exceptions/: base.py  user.py
app/auth/application/interactors/: user_login.py  user_registration.py
app/auth/application/interfaces/repository/: user.py
app/auth/application/interfaces/usecase/: user_login.py  user_registration.py
app/auth/application/services/: authentication.py  security.py
app/auth/domain/entities/: user.py
app/auth/infrastructure/: dependencies.py  exceptions.py
app/auth/infrastructure/models/: __init__.py  session.py  user.py
app/auth/infrastructure/repository/: user.py
app/auth/presentation/: exceptions.py
app/auth/presentation/api/routers/: auth.py
app/auth/presentation/schemas/: login.py  registration.py
app/infrastructure/: config.py  database.py  dependencies.py  log.py  logging.ini  uow.py
app/infrastructure/alembic/: env.py
app/infrastructure/alembic/versions/: 2024_09_28_0809-991834b8e716_user_table.py  2024_10_06_0612-324dc14509c5_initial_users_table.py  2024_10_26_1251-ab9fee449724_user_table.py  2024_12_15_1506__2ec55659d0fc__user_table.py  2024_12_15_1508-951db5b97121_session_table.py  2024_12_16_1412__51534ea49307__session_token_id.py  2024_12_18_0835__569ff2c46791__exercises.py
app/infrastructure/ioc/: dependencies.py
app/infrastructure/ioc/providers/: __init__.py  application_config.py  database.py  interactor.py  repository.py
app/infrastructure/ioc/providers/auth/: __init__.py  interactor.py  service.py
app/infrastructure/ioc/providers/training/: __init__.py  interactor.py  query.py  repository.py
app/infrastructure/ioc/providers/user/: query.py
app/infrastructure/log_config/: __init__.py  formatter.py
app/infrastructure/models/: __init__.py  user.py
app/infrastructure/repository/: user.py
app/presentation/api/routers/: auth.py
app/routers/: auth.py
app/tests/: conftest.py
app/tests/auth/: test_registration.py
app/tests/ioc/: dependencies.py
app/tests/ioc/providers/: application_config.py  database.py
app/tests/ioc/providers/auth/: interactor.py  repository.py
app/tests/ioc/providers/training/: __init__.py  interactor.py
app/tests/ioc/providers/user/: __init__.py
app/tests/training/integration/crud/: conftest.py  test_exercise.py
app/tests/training/plugins/: exercise.py
app/training/application/dto/: exercise.py  exercise_group.py
app/training/application/interactor/: exercise.py
app/training/application/interface/query/: exercise.py  exercise_group.py
app/training/application/interface/repository/: exercise.py
app/training/application/interface/use_case/: exercise.py  exercise_group.py
app/training/infrastructure/: exception.py
app/training/infrastructure/models/: __init__.py  exercise.py  exercise_exercise_group_association.py  exercise_group.py
app/training/infrastructure/query/: exercise.py  exercise_group.py
app/training/infrastructure/repository/: exercise.py
app/training/presentation/api/routers/: __init__.py  exercise.py  exercise_group.py
app/training/presentation/schemas/: exercise.py
app/user/application/dto/: user_profile.py
app/user/application/interfaces/query/: user_profile.py
app/user/infrastructure/query/: user_profile.py
app/user/presentation/api/routers/: user_profile.py
app/user/presentation/api/schemas/: user_profile.py
script/: entrypoint.sh
